SUBDIRS = common adjustlevels colorfx noisereduction oilpaint emboss charcoal \
	      raindrop filmgrain freerotation adjustcurves sheartool antivignetting \
	      lensdistortion perspective border blurfx distortionfx superimpose \
	      inserttext infrared channelmixer texture whitebalance restoration \
	      inpainting hotpixels 

AUTOMAKE_OPTIONS = foreign 

MAINTAINERCLEANFILES = subdirs configure.in acinclude.m4 configure.files 
