SUBDIRS = coreplugin adjustcurves adjustlevels antivignetting blurfx border \
	      channelmixer charcoal colorfx distortionfx emboss filmgrain \
	      freerotation hotpixels infrared inpainting inserttext lensdistortion \
	      noisereduction oilpaint perspective raindrop restoration sheartool \
	      superimpose texture whitebalance 
