add_subdirectory(dimg)
add_subdirectory(dmetadata)
add_subdirectory(database)
add_subdirectory(jpegutils)
add_subdirectory(pgfutils)
add_subdirectory(threadimageio)
add_subdirectory(widgets)
add_subdirectory(imageproperties)
add_subdirectory(progressmanager)
add_subdirectory(threads)
add_subdirectory(versionmanager)
add_subdirectory(notificationmanager)
add_subdirectory(models)
add_subdirectory(template)
add_subdirectory(dialogs)
add_subdirectory(3rdparty)

add_subdirectory(fileactionmanager)
add_subdirectory(filters)
add_subdirectory(settings)
add_subdirectory(album)
add_subdirectory(tags)

if(${KF5KGeoMap_FOUND})
    add_subdirectory(geoiface)
endif()
