if with_included_sqlite3
    SQLITE3_SUBDIR = sqlite3
endif

COMPILE_FIRST = sqlite2 $(SQLITE3_SUBDIR)

SUBDIRS = sqlite2 $(SQLITE3_SUBDIR) lprof histogram levels curves whitebalance dmetadata \
          dimg threadimageio themeengine widgets greycstoration \
          thumbbar jpegutils imageproperties dialogs 
